<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myplantsguru.RegisterActivity">


    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_500"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_500"
        android:hint="@string/prompt_password_again"
        android:imeActionId="@integer/register_form_finished"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <Button
        android:id="@+id/register_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_500"
        android:onClick="signUp"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        android:src="@drawable/backround_plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_sign_up_button"
        tools:layout_editor_absoluteX="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>